tests/baselines/reference/classWithPredefinedTypesAsNames2.errors.txt
classWithPredefinedTypesAsNames2.ts(3,7): error TS1005: '{' expected.


==== classWithPredefinedTypesAsNames2.ts (1 errors) ====
    // classes cannot use predefined types as names
    
    class void {}
          ~~~~
!!! error TS1005: '{' expected.